[gd_scene load_steps=3 format=3 uid="uid://dxr43nnirk7bu"]

[ext_resource type="Theme" uid="uid://cyk224o6irr6" path="res://assets/defaulttheme.tres" id="1_ji8x0"]
[ext_resource type="Script" path="res://scripts/hockey_sim.gd" id="1_smu51"]

[node name="HockeySim" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ji8x0")
script = ExtResource("1_smu51")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VB" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.0416667
anchor_right = 0.97
anchor_bottom = 0.966667
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="Panel/VB"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Hockey: MIH vs UMaine"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VB"]
layout_mode = 2
text = "Time marches on..."

[node name="Periods" type="HBoxContainer" parent="Panel/VB"]
layout_mode = 2

[node name="Pregame" type="ProgressBar" parent="Panel/VB/Periods"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 15.0

[node name="One" type="ProgressBar" parent="Panel/VB/Periods"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = 15.0
max_value = 35.0
value = 15.0

[node name="Two" type="ProgressBar" parent="Panel/VB/Periods"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = 35.0
max_value = 55.0
value = 35.0

[node name="Three" type="ProgressBar" parent="Panel/VB/Periods"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = 55.0
max_value = 75.0
value = 55.0

[node name="Postgame" type="ProgressBar" parent="Panel/VB/Periods"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = 75.0
max_value = 90.0
value = 75.0

[node name="PauseBtn" type="Button" parent="Panel/VB"]
layout_mode = 2
toggle_mode = true
text = "Pause"

[node name="Label2" type="Label" parent="Panel/VB"]
layout_mode = 2
text = "Updates:"

[node name="ColorRect" type="ColorRect" parent="Panel/VB"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="Updates" type="RichTextLabel" parent="Panel/VB/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.010582
anchor_top = 0.0166667
anchor_right = 0.992063
anchor_bottom = 0.980556
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="DoneBtn" type="Button" parent="Panel/VB"]
layout_mode = 2
disabled = true
text = "Exit"

[connection signal="toggled" from="Panel/VB/PauseBtn" to="." method="_on_pause_btn_toggled"]
[connection signal="pressed" from="Panel/VB/DoneBtn" to="." method="_on_done_btn_pressed"]
